@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-26T01:20:02Z",
-  "count_outdated" : 2017,
-  "uniques_outdated" : 1255,
+  "timestamp" : "2025-12-27T01:18:13Z",
+  "count_outdated" : 2018,
+  "uniques_outdated" : 1256,
   "count" : 2025,
   "uniques" : 1263,
   "clones" : [
-    {
-      "timestamp": "2025-12-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-12-14T00:00:00Z",
       "count": 2,
