@@ -1,12 +1,7 @@
 {
-  "count": 8,
-  "uniques": 8,
+  "count": 7,
+  "uniques": 7,
   "clones": [
-    {
-      "timestamp": "2025-12-12T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-12-14T00:00:00Z",
       "count": 2,
