@@ -1,3 +1,12 @@
+2025-12-27T01:18:13Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20532367928 # 851
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-27
+* notice: last 14d: unq all: 7 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 1255 2017 / 1263 2025
+* notice: next accum: outdated-unq outdated-all / unq all: 1256 2018 / 1263 2025
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-12-12] / []
+
 2025-12-26T01:20:02Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20513668118 # 850
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-26
